@@ -8,9 +8,11 @@
     [Rainer Weikusat] (CPAN bug #63408)
   - Fix memory leak in pg_db_cancel (missing PQclear)
     [Rainer Weikusat] (CPAN bug #63441)
+  - Function dequote_bytea returning void should not try to return something
+    [Dagobert Michelsen] (CPAN bug #63497)
   - Fix the number of tests to skip in t/01connect.t when the $DBI_DSN
     environment variable lacks a database specification. [David E. Wheeler]
-  - Fix algorithm for skiping tests in t/06bytea.t when running on a version
+  - Fix algorithm for skipping tests in t/06bytea.t when running on a version
     of PostgreSQL lower than 9.0. [David E. Wheeler]
 
 2.17.2 Released November 21, 2010 (subversion r14542)
